--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Copy issue link Bookmarklet",
+  "name": "copy-issue-link-bookmarklet",
   "version": "0.0.1",
   "description": "Copies a markdown link to the issue your viewing",
   "main": "dist/bookmark.js",
